@@ -7,6 +7,7 @@ v1.6.1 -
 * new event "onNamedSpawnCommand" for controlling named spawn behavior
 * new strategies "modeNoWater" and "modeYBounds" for controlling safe spawn and random spawn behavior
 * improvements to safe teleport to reduce occurance of non-safe teleports, especially noticeable with random strategies
+* added "dynmap.layer.homes.include-bed-home" and "include-named-homes" options (default home is always included)
 
 v1.6 - Jun 30, 2012
 * added /permcheck command (alias /pc) for checking permissions
